--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        " 'Clara, en la tienda Starbucks gasta': 44}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "       [43.5, 43.5]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,13 +164,87 @@
        " 'Para Clara el mejor sitio es Manolo Bakes']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "matriz_recomendaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([49. , 58.5, 43.5])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a partir de aqui son las enseñanzas del profesor\n",
+    "np.min(matriz_gastos, axis = 1)\n",
+    "# esta funcion te permite extraer los valores menores de cada una de las filas \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(np.argmin(matriz_gastos, axis = 1))\n",
+    "np.argmin(matriz_gastos[0])\n",
+    "# esta funcion te permite extraer los indices de los valores minimos de cada una de las filas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "para Rafa la tienda adecuada es Starbucks y el coste es 49.0\n",
+      "para Nacho la tienda adecuada es Manolo Bakes y el coste es 58.5\n",
+      "para Clara la tienda adecuada es Manolo Bakes y el coste es 43.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indice, comprador in enumerate(lista_personas):\n",
+    "    indicetiendarecomendada = np.argmin(matriz_gastos[indice])\n",
+    "    tiendarecomendada = lista_sitios[indicetiendarecomendada]\n",
+    "    precio = matriz_gastos[indice][indicetiendarecomendada]\n",
+    "    print(f\"para {comprador} la tienda adecuada es {tiendarecomendada} y el coste es {precio}\")"
    ]
   },
   {
@@ -222,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +308,7 @@
        " 'pocahontas': array([0, 0, 1, 0, 1])}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +396,7 @@
        " \"Para la película 'pocahontas', la más semejante es 'toy_story' (cos=0.40824829046386296)\"]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +450,7 @@
        " \"Para la película 'wall_e', la más semejante es 'mortal_kombat' (cos=0.8164965809277259)\"]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,6 +465,41 @@
     "    pocahontas=pocahontas,\n",
     "    wall_e=wall_e)\n",
     "similitud_por_coseno(peliculas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para la pelicula toy_story, la mas parecida es jumanji\n",
+      "Para la pelicula jumanji, la mas parecida es mortal_kombat\n",
+      "Para la pelicula mortal_kombat, la mas parecida es jumanji\n",
+      "Para la pelicula pocahontas, la mas parecida es toy_story\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solucion alternativa\n",
+    "matriz_peliculas2 = {\"toy_story\" :[0,1,1,1,0],\n",
+    "                    \"jumanji\":[0,1,0,0,0],\n",
+    "                    \"mortal_kombat\":[1,1,0,0,0],\n",
+    "                    \"pocahontas\":[0,0,1,0,1]}\n",
+    "matriz_valores = np.array(list(matriz_peliculas2.values()))\n",
+    "matriz_valores\n",
+    "for pelicula1, vector1 in matriz_peliculas2.items():\n",
+    "    cosenomaximo = -1\n",
+    "    for pelicula2, vector2 in matriz_peliculas2.items():\n",
+    "        if pelicula1 != pelicula2:\n",
+    "            coseno = np.dot(vector1,vector2)/(np.linalg.norm(vector1)*np.linalg.norm(vector2))\n",
+    "            if coseno > cosenomaximo:\n",
+    "                cosenomaximo = coseno\n",
+    "                peliculasimilar = pelicula2\n",
+    "    print(f\"Para la pelicula {pelicula1}, la mas parecida es {peliculasimilar}\")"
    ]
   }
  ],
