--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
@@ -54,10 +54,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.52700474 0.28163241 0.16121009 0.64089281 0.15518613 0.7773666\n",
+      "  0.4718385  0.83086066 0.66870559 0.53893317]\n",
+      " [0.49229406 0.72043675 0.20090362 0.60657353 0.80148536 0.53437373\n",
+      "  0.35345253 0.10586012 0.39733352 0.58661313]\n",
+      " [0.35527631 0.7574059  0.55808519 0.9374948  0.82995274 0.93484886\n",
+      "  0.39539032 0.07561365 0.5473658  0.04393894]\n",
+      " [0.45887559 0.4445382  0.37169841 0.33550997 0.0366799  0.62847396\n",
+      "  0.45798204 0.86876545 0.31204152 0.56838961]\n",
+      " [0.01010266 0.99141604 0.66830439 0.43568917 0.70681398 0.03889257\n",
+      "  0.53490744 0.35024108 0.40281614 0.19897726]\n",
+      " [0.04132692 0.5895346  0.4245272  0.88916175 0.74850543 0.87568265\n",
+      "  0.2424182  0.90929544 0.91758657 0.08771826]\n",
+      " [0.36098558 0.15691773 0.30476874 0.66798641 0.29533067 0.15800986\n",
+      "  0.14376277 0.6906559  0.31726428 0.21898004]\n",
+      " [0.88766525 0.82019241 0.2746406  0.78789733 0.88349075 0.17352328\n",
+      "  0.82516915 0.35221461 0.14924741 0.72350817]\n",
+      " [0.76384764 0.59875654 0.37450724 0.22461917 0.59928157 0.01515624\n",
+      "  0.67175356 0.55168419 0.73435118 0.38454163]\n",
+      " [0.30137143 0.44405935 0.66793675 0.93865249 0.37852748 0.95576153\n",
+      "  0.37264423 0.81077316 0.79245997 0.54172966]]\n",
+      "0.010102656631101992\n",
+      "0.9914160374672587\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "n = np.random.rand(10,10)\n",
+    "print(n)\n",
+    "print(n.min())\n",
+    "print(n.max())"
+   ]
   },
   {
    "attachments": {
@@ -82,10 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43264081343866384\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.rand(30)\n",
+    "print(x.mean())"
+   ]
   },
   {
    "attachments": {
@@ -120,10 +166,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6  7  8]\n",
+      " [ 9 10 11 12 13 14 15 16]\n",
+      " [17 18 19 20 21 22 23 24]\n",
+      " [25 26 27 28 29 30 31 32]\n",
+      " [33 34 35 36 37 38 39 40]\n",
+      " [41 42 43 44 45 46 47 48]\n",
+      " [49 50 51 52 53 54 55 56]\n",
+      " [57 58 59 60 61 62 63 64]]\n",
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [0 1 0 1 0 1 0 1]]\n",
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.arange(1,65).reshape(8,8)\n",
+    "print(y)\n",
+    "x = np.where(y%2==1,0,1)\n",
+    "print(x)\n",
+    "tablero = np.zeros((8,8), dtype=int)\n",
+    "for i in range(8):\n",
+    "    for j in range(8):\n",
+    "        tablero[i, j] = (i + j) % 2\n",
+    "print(tablero)\n"
+   ]
   },
   {
    "attachments": {
@@ -147,9 +234,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = np.array([0,1])\n",
+    "z = np.array([1,0])\n",
+    "matriz= []\n",
+    "for i in range (8):\n",
+    "    if i %2 ==0:\n",
+    "        matriz.append(np.tile(w,8))\n",
+    "    else:\n",
+    "        matriz.append(np.tile(z,8))\n",
+    "print(np.array(matriz))"
+   ]
   },
   {
    "attachments": {
@@ -174,10 +288,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.89174946 -0.54196047 -0.4884823   0.27458148 -0.59328109]\n",
+      " [-0.51543286 -0.86331471  0.37596023 -0.66467081 -0.61605869]\n",
+      " [ 2.23514229 -0.22122463  0.04962764  1.77435075 -0.09513172]\n",
+      " [-1.66946304  0.13209374  2.22633072 -0.4745654  -0.6641057 ]\n",
+      " [-1.33261895  1.08054811  1.15487289 -0.22832719  0.55687919]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ca = np.random.rand(5,5)\n",
+    "co = []\n",
+    "for element in ca:\n",
+    "    co.append((element-ca.mean())/ca.std())\n",
+    "print(np.array(co))"
+   ]
   },
   {
    "attachments": {
@@ -202,15 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4]),)\n",
+      "[0 1 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 0, 0, 4, 0])\n",
+    "indices = np.nonzero(a)\n",
+    "print(indices)\n",
+    "print(indices[0])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -224,12 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
