--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
@@ -56,9 +56,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  4],\n",
+       "       [ 2, -3],\n",
+       "       [ 3,  5],\n",
+       "       [-5,  4],\n",
+       "       [ 0, -1],\n",
+       "       [ 3,  2],\n",
+       "       [-1,  1],\n",
+       "       [ 5, -2],\n",
+       "       [-5,  3],\n",
+       "       [-5,  1],\n",
+       "       [-2,  5],\n",
+       "       [ 0,  4]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "alumnos_aidone = [[5, 4],\n",
+    " [2, -3],\n",
+    " [3, 5],\n",
+    " [-5, 4],\n",
+    " [0, -1],\n",
+    " [3, 2],\n",
+    " [-1, 1],\n",
+    " [5, -2],\n",
+    " [-5, 3],\n",
+    " [-5, 1]]\n",
+    "teresa = np.array([[-2,5]])\n",
+    "udo = np.array([[0,4]])\n",
+    "np.concatenate([alumnos_aidone,teresa,udo], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2  5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_aidone = [[5, 4],\n",
     " [2, -3],\n",
@@ -69,15 +132,10 @@
     " [-1, 1],\n",
     " [5, -2],\n",
     " [-5, 3],\n",
-    " [-5, 1]]\n"
+    " [-5, 1]]\n",
+    "alumnos_aidone = np.vstack([alumnos_aidone,teresa,udo])\n",
+    "print(alumnos_aidone)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -94,16 +152,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Par Rodrigo con vector [5 4]:\n",
+      "Rodrigo,0\n",
+      "Par Lucia con vector [ 2 -3]:\n",
+      "Lucia,1\n",
+      "Par Alejandro con vector [3 5]:\n",
+      "Alejandro,0\n",
+      "Par Valeria con vector [-5  4]:\n",
+      "Valeria,2\n",
+      "Par Javier con vector [ 0 -1]:\n",
+      "Javier,1\n",
+      "Par Camila con vector [3 2]:\n",
+      "Camila,0\n",
+      "Par Diego con vector [-1  1]:\n",
+      "Diego,2\n",
+      "Par Gabriela con vector [ 5 -2]:\n",
+      "Gabriela,1\n",
+      "Par Mateo con vector [-5  3]:\n",
+      "Mateo,2\n",
+      "Par Sofía con vector [-5  1]:\n",
+      "Sofía,2\n",
+      "Par Teresa con vector [-2  5]:\n",
+      "Teresa,2\n",
+      "Par Udo con vector [0 4]:\n",
+      "Udo,0\n",
+      "[[ 0.  6. 10.]\n",
+      " [ 7.  3.  9.]\n",
+      " [ 2.  7.  8.]\n",
+      " [10. 11.  1.]\n",
+      " [ 7.  5.  6.]\n",
+      " [ 2.  4.  8.]\n",
+      " [ 6.  6.  4.]\n",
+      " [ 6.  0. 11.]\n",
+      " [10. 11.  0.]\n",
+      " [10. 10.  2.]\n",
+      " [ 7.  9.  3.]\n",
+      " [ 5.  7.  5.]]\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía','Teresa','Udo']\n",
     "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
     "\n",
     "##### CAMBIA LA SIGUIENTE LINEA, según 2.1 ######\n",
-    "diccionario_reparto = {} \n",
+    "diccionario_reparto = np.zeros([12,3]) \n",
     "#################################################\n",
     "\n",
     "num_alumnos = len(lista_alumnos)\n",
@@ -111,27 +221,56 @@
     "for i_vector in range(num_alumnos): # Recorremos el diccionario donde tenemos el vector que caracteriza \n",
     "    \n",
     "    alumno = lista_alumnos[i_vector]\n",
-    "    vector_alumno = alumnos_aidone[i_vector]\n",
-    "    print(f\"Par {alumno} con vector {vector_alumno}:\")\n",
-    "\n",
-    "    distancia_minima = 99999999 \n",
-    "    indice_distancia_minima = -1\n",
-    "\n",
+    "    \n",
+    "    print(f\"Par {alumno} con vector {alumnos_aidone[i_vector]}:\")\n",
+    "    vector_alumno = np.array(alumnos_aidone[i_vector])\n",
     "    vector_distancias = np.full((3),1000) # 1000 es un número arbitrario, no le des vueltas a por qué ese número.\n",
     "\n",
     "    for indice_curso,alumno_ref in enumerate(alumnos_ref):\n",
     "        indice_alumno_ref = lista_alumnos.index(alumno_ref)\n",
-    "        vec_ref = alumnos_aidone[indice_alumno_ref] \n",
+    "        vec_ref = np.array(alumnos_aidone[indice_alumno_ref]) \n",
     "        \n",
     "        ####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\n",
-    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        distancia = np.sqrt(np.sum((vector_alumno - vec_ref) ** 2)) # Obtenemos la distancia \n",
     "        #########################################################################################################################################\n",
     "        vector_distancias[indice_curso] = distancia\n",
-    "   \n",
+    "    diccionario_reparto[i_vector] = vector_distancias\n",
     "    ######################################################### 2.3 COMPLETA LA SIGUIENTE LINEA ######################################\n",
-    "    indice_curso_elegido = __.___(______)\n",
-    "    print(f\"{____________[___________]}\")\n",
+    "    indice_curso_elegido = np.argmin(vector_distancias)\n",
+    "    print(f\"{alumno},{round(indice_curso_elegido)}\")\n",
+    "print(diccionario_reparto)\n",
     "    ###############################################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  6., 10.],\n",
+       "       [ 7.,  3.,  9.],\n",
+       "       [ 2.,  7.,  8.],\n",
+       "       [10., 11.,  1.],\n",
+       "       [ 7.,  5.,  6.],\n",
+       "       [ 2.,  4.,  8.],\n",
+       "       [ 6.,  6.,  4.],\n",
+       "       [ 6.,  0., 11.],\n",
+       "       [10., 11.,  0.],\n",
+       "       [10., 10.,  2.],\n",
+       "       [ 7.,  9.,  3.],\n",
+       "       [ 5.,  7.,  5.]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario_reparto"
    ]
   },
   {
@@ -143,9 +282,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rodrigo:CAI\n",
+      "Lucia:ER\n",
+      "Alejandro:CAI\n",
+      "Valeria:NMPC\n",
+      "Javier:ER\n",
+      "Camila:CAI\n",
+      "Diego:NMPC\n",
+      "Gabriela:ER\n",
+      "Mateo:NMPC\n",
+      "Sofía:NMPC\n",
+      "Teresa:NMPC\n",
+      "Udo:CAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indice,valor in enumerate(diccionario_reparto):\n",
+    "    print(f\"{lista_alumnos[indice]}:{curso_asignado[np.argmin(valor)]}\")"
+   ]
   },
   {
    "attachments": {
@@ -188,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,15 +360,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n",
+      "[['' 'X' '' '' '' '' '' '' '' '']\n",
+      " ['' 'O' '' 'O' 'O' 'O' 'O' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '-' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\javie\\AppData\\Local\\Temp\\ipykernel_114916\\2777228390.py:24: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  orientacionnueva = int(np.random.randint(4,size=1))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([['', 'X', '', '', '', '', '', '', '', ''],\n",
+       "       ['', 'O', '', 'O', 'O', 'O', 'O', 'O', 'O', 'O'],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '-', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', ''],\n",
+       "       ['', '', '', '', '', '', '', '', '', '']], dtype='<U1')"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tablero = np.full((10,10),\"\")\n",
+    "print(tablero)\n",
+    "def llenartablero(*barcos):\n",
+    "    for barco in barcos:\n",
+    "        for indice in barco:\n",
+    "            tablero[indice] =\"O\"\n",
+    "    return tablero\n",
+    "\n",
+    "llenartablero([(0,1), (1,1)],[(1,3), (1,4), (1,5), (1,6)])\n",
+    "\n",
+    "def disparostotal(disparos):\n",
+    "    for disparo in disparos:\n",
+    "        if tablero[disparo] == \"O\":\n",
+    "            tablero[disparo] = \"X\"\n",
+    "        else:\n",
+    "            tablero[disparo] =\"-\"\n",
+    "    return tablero\n",
+    "tablero_inicial=disparostotal([(0,1),(5,5)])\n",
+    "print(tablero_inicial)\n",
+    "\n",
+    "def nuevobarco(posicionnueva=0, orientacionnueva=0):\n",
+    "    tamaño = 4\n",
+    "    posicionnueva = tuple(np.random.randint(10,size=2))\n",
+    "    orientacionnueva = int(np.random.randint(4,size=1))\n",
+    "    y,x = posicionnueva\n",
+    "    tablero = tablero_inicial\n",
+    "    if tablero[y,x] == \"O\":\n",
+    "        return nuevobarco()\n",
+    "    else:\n",
+    "        tablero[y,x] = \"O\"\n",
+    "        while tamaño> 0:\n",
+    "            if orientacionnueva == 1:\n",
+    "                if y-1<0:\n",
+    "                    return nuevobarco()\n",
+    "                else:\n",
+    "                    y=y-1\n",
+    "                    tablero[y,x] = \"O\"\n",
+    "                    tamaño = tamaño-1\n",
+    "            elif orientacionnueva == 2:\n",
+    "                if y+1>9:\n",
+    "                    return nuevobarco()\n",
+    "                else:\n",
+    "                    y=y+1\n",
+    "                    tablero[y,x] = \"O\"\n",
+    "                    tamaño = tamaño-1   \n",
+    "            elif orientacionnueva == 3:\n",
+    "                if x+1>9:\n",
+    "                    return nuevobarco()\n",
+    "                else:\n",
+    "                    x=x+1\n",
+    "                    tablero[y,x] = \"O\"\n",
+    "                    tamaño = tamaño-1\n",
+    "            else:\n",
+    "                if x-1<0:\n",
+    "                    return nuevobarco()\n",
+    "                else:\n",
+    "                    x=x-1\n",
+    "                    tablero[y,x] = \"O\"\n",
+    "                    tamaño = tamaño-1\n",
+    "    return tablero\n",
+    "nuevobarco(0,1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -219,14 +498,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
