--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/01_Workout/Hello_Numpy_Vectores.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/01_Workout/Hello_Numpy_Vectores.ipynb
@@ -130,9 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.__version__"
@@ -140,10 +151,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mType:\u001b[39m        module\n",
+      "\u001b[31mString form:\u001b[39m <module 'numpy' from 'c:\\\\Users\\\\javie\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python312\\\\Lib\\\\site-packages\\\\numpy\\\\__init__.py'>\n",
+      "\u001b[31mFile:\u001b[39m        c:\\users\\javie\\appdata\\local\\programs\\python\\python312\\lib\\site-packages\\numpy\\__init__.py\n",
+      "\u001b[31mDocstring:\u001b[39m  \n",
+      "NumPy\n",
+      "=====\n",
+      "\n",
+      "Provides\n",
+      "  1. An array object of arbitrary homogeneous items\n",
+      "  2. Fast mathematical operations over arrays\n",
+      "  3. Linear Algebra, Fourier Transforms, Random Number Generation\n",
+      "\n",
+      "How to use the documentation\n",
+      "----------------------------\n",
+      "Documentation is available in two forms: docstrings provided\n",
+      "with the code, and a loose standing reference guide, available from\n",
+      "`the NumPy homepage <https://numpy.org>`_.\n",
+      "\n",
+      "We recommend exploring the docstrings using\n",
+      "`IPython <https://ipython.org>`_, an advanced Python shell with\n",
+      "TAB-completion and introspection capabilities.  See below for further\n",
+      "instructions.\n",
+      "\n",
+      "The docstring examples assume that `numpy` has been imported as ``np``::\n",
+      "\n",
+      "  >>> import numpy as np\n",
+      "\n",
+      "Code snippets are indicated by three greater-than signs::\n",
+      "\n",
+      "  >>> x = 42\n",
+      "  >>> x = x + 1\n",
+      "\n",
+      "Use the built-in ``help`` function to view a function's docstring::\n",
+      "\n",
+      "  >>> help(np.sort)\n",
+      "  ... # doctest: +SKIP\n",
+      "\n",
+      "For some objects, ``np.info(obj)`` may provide additional help.  This is\n",
+      "particularly true if you see the line \"Help on ufunc object:\" at the top\n",
+      "of the help() page.  Ufuncs are implemented in C, not Python, for speed.\n",
+      "The native Python help() does not know how to view their help, but our\n",
+      "np.info() function does.\n",
+      "\n",
+      "Available subpackages\n",
+      "---------------------\n",
+      "lib\n",
+      "    Basic functions used by several sub-packages.\n",
+      "random\n",
+      "    Core Random Tools\n",
+      "linalg\n",
+      "    Core Linear Algebra Tools\n",
+      "fft\n",
+      "    Core FFT routines\n",
+      "polynomial\n",
+      "    Polynomial tools\n",
+      "testing\n",
+      "    NumPy testing tools\n",
+      "distutils\n",
+      "    Enhancements to distutils with support for\n",
+      "    Fortran compilers support and more (for Python <= 3.11)\n",
+      "\n",
+      "Utilities\n",
+      "---------\n",
+      "test\n",
+      "    Run numpy unittests\n",
+      "show_config\n",
+      "    Show numpy build configuration\n",
+      "__version__\n",
+      "    NumPy version string\n",
+      "\n",
+      "Viewing documentation using IPython\n",
+      "-----------------------------------\n",
+      "\n",
+      "Start IPython and import `numpy` usually under the alias ``np``: `import\n",
+      "numpy as np`.  Then, directly past or use the ``%cpaste`` magic to paste\n",
+      "examples into the shell.  To see which functions are available in `numpy`,\n",
+      "type ``np.<TAB>`` (where ``<TAB>`` refers to the TAB key), or use\n",
+      "``np.*cos*?<ENTER>`` (where ``<ENTER>`` refers to the ENTER key) to narrow\n",
+      "down the list.  To view the docstring for a function, use\n",
+      "``np.cos?<ENTER>`` (to view the docstring) and ``np.cos??<ENTER>`` (to view\n",
+      "the source code).\n",
+      "\n",
+      "Copies vs. in-place operation\n",
+      "-----------------------------\n",
+      "Most of the functions in `numpy` return a copy of the array argument\n",
+      "(e.g., `np.sort`).  In-place versions of these functions are often\n",
+      "available as array methods, i.e. ``x = np.array([1,2,3]); x.sort()``.\n",
+      "Exceptions to this rule are documented."
+     ]
+    }
+   ],
+   "source": [
+    "np?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vector_np = np.array([2,3])\n",
+    "vector_lista = [2,3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(vector_np))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,43 +310,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "vector_1 = np.array([23,-4,5])\n",
+    "vec_2 = [12,3,-12]\n",
+    "vector_2 = np.array(vec_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35 -1 -7]\n",
+      "[11 -7 17]\n",
+      "[ 69 -12  15]\n",
+      "204\n",
+      "204\n",
+      "23.874672772626646 17.233687939614086\n",
+      "0.49580912449444803\n",
+      "21.42428528562855\n"
+     ]
+    }
+   ],
+   "source": [
     "# Sumas\n",
-    "\n",
+    "vec_suma = vector_1+vector_2\n",
+    "print(vec_suma)\n",
     "\n",
     "# Restas\n",
-    "\n",
-    "\n",
+    "vec_resta = vector_1-vector_2\n",
+    "print(vec_resta)\n",
     "\n",
     "# Producto POR un escalar\n",
-    "\n",
+    "vec_escalar = 3*vector_1\n",
+    "print(vec_escalar)\n",
     "\n",
     "\n",
     "# Producto escalar\n",
+    "dot_product = vector_1.dot(vector_2)\n",
+    "print(dot_product)\n",
     "\n",
-    "\n",
+    "dot_product = np.dot(vector_1,vector_2)\n",
+    "print(dot_product)\n",
     "\n",
     "# Norma o longitud o magnitud\n",
-    "\n",
-    "\n",
+    "norm_1 = np.linalg.norm(vector_1)\n",
+    "norm_2 = np.linalg.norm(vector_2)\n",
+    "print(norm_1,norm_2)\n",
     "\n",
     "# Coseno del ángulo\n",
-    "\n",
-    "\n",
+    "cos_ang_1_2 = dot_product/(norm_1*norm_2)\n",
+    "print(cos_ang_1_2)\n",
     "\n",
     "# Distancia entre dos vectores\n",
-    "\n",
-    "\n",
+    "dist_v1_v2 = np.linalg.norm(vector_1 - vector_2)\n",
+    "print(dist_v1_v2)\n",
     "\n"
    ]
   },
@@ -256,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,10 +422,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Rodrigo': array([5, 4]),\n",
+       " 'Lucia': array([ 2, -3]),\n",
+       " 'Alejandro': array([3, 5]),\n",
+       " 'Valeria': array([-5,  4]),\n",
+       " 'Javier': array([ 0, -1]),\n",
+       " 'Camila': array([3, 2]),\n",
+       " 'Diego': array([-1,  1]),\n",
+       " 'Gabriela': array([ 5, -2]),\n",
+       " 'Mateo': array([-5,  3]),\n",
+       " 'Sofía': array([-5,  1])}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alumnos_np = {}\n",
+    "for alumno, vec_list in alumnos_aidone.items():\n",
+    "    alumnos_np[alumno] = np.array(vec_list)\n",
+    "(alumnos_np)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,9 +461,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Rodrigo, el curso asignado es CAI\n",
+      "Para Lucia, el curso asignado es ER\n",
+      "Para Alejandro, el curso asignado es CAI\n",
+      "Para Valeria, el curso asignado es NMPC\n",
+      "Para Javier, el curso asignado es ER\n",
+      "Para Camila, el curso asignado es CAI\n",
+      "Para Diego, el curso asignado es NMPC\n",
+      "Para Gabriela, el curso asignado es ER\n",
+      "Para Mateo, el curso asignado es NMPC\n",
+      "Para Sofía, el curso asignado es NMPC\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
@@ -329,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
