--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
@@ -320,10 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiplicacion_de_matrices(matriz1,matriz2):\n",
+    "    v1= np.array(matriz1)\n",
+    "    v2= np.array(matriz2)\n",
+    "    resultado = \"No hay resultado\"\n",
+    "    if len(matriz1[0]) != len(matriz2):\n",
+    "        print(\"Los vectores deben tener la misma dimensión.\")\n",
+    "    else:\n",
+    "        resultado = v1.dot(v2)\n",
+    "    return resultado\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -357,10 +369,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93 59]\n",
+      " [66 48]\n",
+      " [47 45]]\n",
+      "Los vectores deben tener la misma dimensión.\n",
+      "No hay resultado\n",
+      "[[-10  10   6]\n",
+      " [ -6   8   6]\n",
+      " [-10  10   6]\n",
+      " [ -9  12   9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[9,5,8,5],[6,6,3,6],[0,8,1,9]]\n",
+    "B = [[4,2],[2,2],[4,2],[3,3]]\n",
+    "C = [[-2,1,0],[-1,3,3]]\n",
+    "print(multiplicacion_de_matrices(A,B))\n",
+    "print(multiplicacion_de_matrices(A,C))\n",
+    "print(multiplicacion_de_matrices(B,C))"
+   ]
   },
   {
    "cell_type": "markdown",
