--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/10_Ejercicios_Array.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/10_Ejercicios_Array.ipynb
@@ -54,10 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.__version__"
+   ]
   },
   {
    "attachments": {
@@ -82,10 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "my_array = np.arange(10)\n",
+    "print(my_array)"
+   ]
   },
   {
    "attachments": {
@@ -110,10 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_true = np.ones((3,3),np.bool)\n",
+    "print(matriz_true)"
+   ]
   },
   {
    "attachments": {
@@ -138,10 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n",
+      "[False  True False  True False  True False  True False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arraynuevo = np.array(my_array%2==1)\n",
+    "arrayfinal = my_array[arraynuevo]\n",
+    "print(arrayfinal)\n",
+    "print(arraynuevo)"
+   ]
   },
   {
    "attachments": {
@@ -166,10 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -1  2 -1  4 -1  6 -1  8 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array[my_array%2==1] = -1\n",
+    "print(my_array)"
+   ]
   },
   {
    "attachments": {
@@ -194,10 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0, -1,  2, -1,  4],\n",
+       "       [-1,  6, -1,  8, -1]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array.reshape(2,5)"
+   ]
   },
   {
    "attachments": {
@@ -223,10 +301,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]]\n",
+      "[[ 1  6 11 16]\n",
+      " [ 2  7 12 17]\n",
+      " [ 3  8 13 18]\n",
+      " [ 4  9 14 19]\n",
+      " [ 5 10 15 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.arange(1,21)\n",
+    "matrizfinal = matriz.reshape(4,5)\n",
+    "print(matrizfinal)\n",
+    "print(matrizfinal.T)"
+   ]
   },
   {
    "attachments": {
@@ -256,10 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [6, 7]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arraynuevo = np.array([matrizfinal[0][:2],matrizfinal[1][:2]])\n",
+    "arraynuevo"
+   ]
   },
   {
    "attachments": {
@@ -288,10 +402,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  3  5  7  9 11 13 15 17 19]\n",
+      "[[ 1  3  5]\n",
+      " [13 15 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1 = matrizfinal[matrizfinal%2==1]\n",
+    "print(array1)\n",
+    "arrayfinal = np.array([array1[:3],array1[6:9]])\n",
+    "print(arrayfinal)"
+   ]
   },
   {
    "attachments": {
@@ -325,10 +454,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "3\n",
+      "5\n",
+      "2\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =np.random.randint(10,20, size = (5,2,6))\n",
+    "print(x.size)\n",
+    "print(x.ndim)\n",
+    "filas = x.shape[0]\n",
+    "columnas = x.shape[1]\n",
+    "tercera = x.shape[2]\n",
+    "print(filas)\n",
+    "print(columnas)\n",
+    "print(tercera)"
+   ]
   },
   {
    "attachments": {
@@ -358,11 +509,37 @@
     "\n",
     "Resuélvelo de dos maneras diferentes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Loro']\n",
+      "[ True False False  True False]\n",
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([\"Loro\", \"Perro\", \"Gato\", \"Loro\", \"Perro\"])\n",
+    "y = np.array(x[x==\"Loro\"])\n",
+    "print(y)\n",
+    "\n",
+    "x_bools = np.array(x ==\"Loro\")\n",
+    "print(x_bools)\n",
+    "z = x[x_bools]\n",
+    "print(z)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -376,12 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
