--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -58,10 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "[[1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n",
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(np.vstack([a,b]))"
+   ]
   },
   {
    "attachments": {
@@ -91,10 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4 1 1 1 1 1]\n",
+      " [5 6 7 8 9 1 1 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.hstack([a,b]))"
+   ]
   },
   {
    "attachments": {
@@ -123,10 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "1\n",
+      "9\n",
+      "[1 2 3 4 5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(10)\n",
+    "print(my_array)\n",
+    "print(my_array[1])\n",
+    "print(my_array[-1])\n",
+    "print(my_array[1:8])"
+   ]
   },
   {
    "attachments": {
@@ -154,10 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  4  7 10 13 16 19 22 25 28 31 34 37 40 43 46]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(start= 1,stop = 49,step = 3))"
+   ]
   },
   {
    "attachments": {
@@ -185,10 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.   3.75 3.5  3.25 3.   2.75 2.5  2.25 2.   1.75 1.5 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(start= 4,stop = 1.25,step = -0.25))"
+   ]
   },
   {
    "attachments": {
@@ -213,10 +283,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[10  7 17]\n",
+      "  [ 3  1  3]\n",
+      "  [19  3 12]\n",
+      "  [ 6  1  8]\n",
+      "  [ 9 19  6]]\n",
+      "\n",
+      " [[ 2  7 11]\n",
+      "  [ 8 11  1]\n",
+      "  [16 12 12]\n",
+      "  [ 1  3 10]\n",
+      "  [11  9 12]]\n",
+      "\n",
+      " [[ 7 19  2]\n",
+      "  [17 13 17]\n",
+      "  [ 5 11 16]\n",
+      "  [12  2  5]\n",
+      "  [15 10  1]]\n",
+      "\n",
+      " [[ 1 12 13]\n",
+      "  [16 17  8]\n",
+      "  [ 2 13  2]\n",
+      "  [12  4  1]\n",
+      "  [ 2 16  4]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randint(0,20,[4,5,3]))"
+   ]
   },
   {
    "attachments": {
@@ -243,10 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3 -1 -1 -1 -1  8  9]\n",
+      "[0 1 2 3 None None None None 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuencia = np.arange(10)\n",
+    "x = np.where((secuencia>3) & (secuencia<8),-1,secuencia)\n",
+    "print(x)\n",
+    "y = np.where((secuencia>3) & (secuencia<8),None,secuencia)\n",
+    "print(y)\n"
+   ]
   },
   {
    "attachments": {
@@ -273,10 +390,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 15 16 17 18]\n",
+      " [19 20 21 22 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n",
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 30 16 17 18]\n",
+      " [19 20 42 22 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]] [[30 16]\n",
+      " [42 22]]\n",
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 30 32 17 18]\n",
+      " [19 20 42 44 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(1,37).reshape(6,6)\n",
+    "print(x)\n",
+    "xsub=x[2:4,2:4]\n",
+    "xsub[0:2,0:1] = xsub[0:2,0:1]*2\n",
+    "print(x,xsub)\n",
+    "x = np.arange(1,37).reshape(6,6)\n",
+    "x[2:4,2:4] = x[2:4,2:4]*2\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {
@@ -301,10 +453,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 4,  4],\n",
+       "        [ 4, -1],\n",
+       "        [-1, -1]],\n",
+       "\n",
+       "       [[ 8,  2],\n",
+       "        [-1,  8],\n",
+       "        [-1,  4]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.random.randint(1,11, size = [2,3,2])\n",
+    "np.where(x%2==1,-1,x)"
+   ]
   },
   {
    "attachments": {
@@ -329,10 +501,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,0,0,4,0])\n",
+    "b = np.where(a ==0,False,True)\n",
+    "a[b]\n"
+   ]
   },
   {
    "attachments": {
@@ -357,15 +544,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El viento sopló sobre su sombra maldita y traicionera\n",
+      "[[ 2  6  5]\n",
+      " [ 5  2  6]\n",
+      " [ 7  1 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"El viento sopló sobre su sombra maldita y traicionera\"\n",
+    "print(a)\n",
+    "b = np.array(a.split()).reshape(3,3)\n",
+    "f= np.vectorize(len)\n",
+    "b = f(b)\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -379,12 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
