--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -169,29 +169,29 @@
      "output_type": "stream",
      "text": [
       "Par Rodrigo con vector [5 4]:\n",
-      "Rodrigo,0\n",
+      "Rodrigo,CAI\n",
       "Par Lucia con vector [ 2 -3]:\n",
-      "Lucia,1\n",
+      "Lucia,ER\n",
       "Par Alejandro con vector [3 5]:\n",
-      "Alejandro,0\n",
+      "Alejandro,CAI\n",
       "Par Valeria con vector [-5  4]:\n",
-      "Valeria,2\n",
+      "Valeria,NMPC\n",
       "Par Javier con vector [ 0 -1]:\n",
-      "Javier,1\n",
+      "Javier,ER\n",
       "Par Camila con vector [3 2]:\n",
-      "Camila,0\n",
+      "Camila,CAI\n",
       "Par Diego con vector [-1  1]:\n",
-      "Diego,2\n",
+      "Diego,NMPC\n",
       "Par Gabriela con vector [ 5 -2]:\n",
-      "Gabriela,1\n",
+      "Gabriela,ER\n",
       "Par Mateo con vector [-5  3]:\n",
-      "Mateo,2\n",
+      "Mateo,NMPC\n",
       "Par Sofía con vector [-5  1]:\n",
-      "Sofía,2\n",
+      "Sofía,NMPC\n",
       "Par Teresa con vector [-2  5]:\n",
-      "Teresa,2\n",
+      "Teresa,NMPC\n",
       "Par Udo con vector [0 4]:\n",
-      "Udo,0\n",
+      "Udo,CAI\n",
       "[[ 0.  6. 10.]\n",
       " [ 7.  3.  9.]\n",
       " [ 2.  7.  8.]\n",
@@ -231,13 +231,15 @@
     "        vec_ref = np.array(alumnos_aidone[indice_alumno_ref]) \n",
     "        \n",
     "        ####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\n",
-    "        distancia = np.sqrt(np.sum((vector_alumno - vec_ref) ** 2)) # Obtenemos la distancia \n",
+    "        distancia = np.sqrt(np.sum((vector_alumno - vec_ref) ** 2)) \n",
+    "        # es lo mismo hacer distancia =np.linalg.norm(vector_alumno - vec_ref)\n",
+    "        # Obtenemos la distancia \n",
     "        #########################################################################################################################################\n",
     "        vector_distancias[indice_curso] = distancia\n",
     "    diccionario_reparto[i_vector] = vector_distancias\n",
     "    ######################################################### 2.3 COMPLETA LA SIGUIENTE LINEA ######################################\n",
     "    indice_curso_elegido = np.argmin(vector_distancias)\n",
-    "    print(f\"{alumno},{round(indice_curso_elegido)}\")\n",
+    "    print(f\"{alumno},{curso_asignado[round(indice_curso_elegido)]}\")\n",
     "print(diccionario_reparto)\n",
     "    ###############################################################################################"
    ]
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +309,8 @@
    ],
    "source": [
     "for indice,valor in enumerate(diccionario_reparto):\n",
-    "    print(f\"{lista_alumnos[indice]}:{curso_asignado[np.argmin(valor)]}\")"
+    "    print(f\"{lista_alumnos[indice]}:{curso_asignado[np.argmin(valor)]}\")\n",
+    "\n"
    ]
   },
   {
@@ -360,65 +363,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']]\n",
-      "[['' 'X' '' '' '' '' '' '' '' '']\n",
-      " ['' 'O' '' 'O' 'O' 'O' 'O' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '-' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']\n",
-      " ['' '' '' '' '' '' '' '' '' '']]\n"
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "Tocado\n",
+      "Ya has disparado aqui\n",
+      "[[' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\javie\\AppData\\Local\\Temp\\ipykernel_114916\\2777228390.py:24: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\javie\\AppData\\Local\\Temp\\ipykernel_114916\\3379221037.py:28: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  orientacionnueva = int(np.random.randint(4,size=1))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([['', 'X', '', '', '', '', '', '', '', ''],\n",
-       "       ['', 'O', '', 'O', 'O', 'O', 'O', 'O', 'O', 'O'],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '-', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', ''],\n",
-       "       ['', '', '', '', '', '', '', '', '', '']], dtype='<U1')"
+       "array([[' ', 'X', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', 'O', ' ', 'O', 'O', 'O', 'O', ' ', ' ', ' '],\n",
+       "       ['O', 'O', 'O', 'O', 'O', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       "       [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']], dtype='<U1')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tablero = np.full((10,10),\"\")\n",
+    "tablero = np.full((10,10),\" \")\n",
     "print(tablero)\n",
     "def llenartablero(*barcos):\n",
     "    for barco in barcos:\n",
@@ -432,53 +437,99 @@
     "    for disparo in disparos:\n",
     "        if tablero[disparo] == \"O\":\n",
     "            tablero[disparo] = \"X\"\n",
-    "        else:\n",
+    "            print(\"Tocado\")\n",
+    "        elif tablero[disparo] == \"\":\n",
     "            tablero[disparo] =\"-\"\n",
+    "            print(\"Agua\")\n",
+    "        else:\n",
+    "            print(\"Ya has disparado aqui\")\n",
     "    return tablero\n",
     "tablero_inicial=disparostotal([(0,1),(5,5)])\n",
     "print(tablero_inicial)\n",
     "\n",
     "def nuevobarco(posicionnueva=0, orientacionnueva=0):\n",
     "    tamaño = 4\n",
-    "    posicionnueva = tuple(np.random.randint(10,size=2))\n",
+    "    posicionnueva = tuple(np.random.randint(10,size=2)) \n",
     "    orientacionnueva = int(np.random.randint(4,size=1))\n",
     "    y,x = posicionnueva\n",
-    "    tablero = tablero_inicial\n",
-    "    if tablero[y,x] == \"O\":\n",
+    "    tablerotemporal = tablero_inicial\n",
+    "    if tablerotemporal[y,x] == \"O\":\n",
     "        return nuevobarco()\n",
     "    else:\n",
-    "        tablero[y,x] = \"O\"\n",
+    "        tablerotemporal[y,x] = \"O\"\n",
     "        while tamaño> 0:\n",
     "            if orientacionnueva == 1:\n",
     "                if y-1<0:\n",
-    "                    return nuevobarco()\n",
+    "                    return False\n",
     "                else:\n",
     "                    y=y-1\n",
-    "                    tablero[y,x] = \"O\"\n",
+    "                    tablerotemporal[y,x] = \"O\"\n",
     "                    tamaño = tamaño-1\n",
     "            elif orientacionnueva == 2:\n",
     "                if y+1>9:\n",
-    "                    return nuevobarco()\n",
+    "                    return False\n",
     "                else:\n",
     "                    y=y+1\n",
-    "                    tablero[y,x] = \"O\"\n",
+    "                    tablerotemporal[y,x] = \"O\"\n",
     "                    tamaño = tamaño-1   \n",
     "            elif orientacionnueva == 3:\n",
     "                if x+1>9:\n",
-    "                    return nuevobarco()\n",
+    "                    return False\n",
     "                else:\n",
     "                    x=x+1\n",
-    "                    tablero[y,x] = \"O\"\n",
+    "                    tablerotemporal[y,x] = \"O\"\n",
     "                    tamaño = tamaño-1\n",
     "            else:\n",
     "                if x-1<0:\n",
-    "                    return nuevobarco()\n",
+    "                    return False\n",
     "                else:\n",
     "                    x=x-1\n",
-    "                    tablero[y,x] = \"O\"\n",
+    "                    tablerotemporal[y,x] = \"O\"\n",
     "                    tamaño = tamaño-1\n",
-    "    return tablero\n",
-    "nuevobarco(0,1)"
+    "    return tablerotemporal\n",
+    "nuevobarco(0,1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternativa para comprobar si sale del tablero\n",
+    "def crear_barco(tablero, barco):\n",
+    "    filas_totales,columnas_totales = tablero.shape()\n",
+    "    while tamaño > 4:\n",
+    "        for pieza in barco:\n",
+    "            fila,columna = pieza\n",
+    "            if not (0 <= fila < filas_totales and 0 <= columna < columnas_totales): #concatenacion de condiciones\n",
+    "                return False\n",
+    "            if tablero[pieza] == \"O\" or tablero[pieza] == \"\":\n",
+    "                return False\n",
+    "            else:\n",
+    "                tablero[pieza] = \"O\" \n",
+    "                tamaño = tamaño-1\n",
+    "    return tablero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.choice(\"N\",\"S\",\"E\",\"O\") # otra forma de elegir la orientacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hacer un bucle if al inicio de la funcion, en el cual si sale false, la repita y sume un contador, de manera que siga hasta conseguirlo\n",
+    "# e indique cuantos intentos han faltado \n"
    ]
   }
  ],
