--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/02_Series_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/02_Series_II.ipynb
@@ -24,15 +24,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avatar                 2923\n",
+       "Vengadores:End Game    2799\n",
+       "Avatar II              2320\n",
+       "Titanic                2264\n",
+       "SW VII                 2071\n",
+       "Name: top5, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "top5 = pd.Series([2923,2799,2320,2264,2071],\n",
+    "                 index = [\"Avatar\",\"Vengadores:End Game\",\"Avatar II\",\"Titanic\",\"SW VII\"])\n",
+    "top5.name = \"top5\"\n",
+    "top5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,22 +78,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5.iloc[2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5.loc[\"Avatar II\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,15 +137,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2320)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5[\"Avatar II\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "serie_test = pd.Series([2300,1200,1220,1222])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,17 +178,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(serie_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2300\n",
+       "1    1200\n",
+       "2    1220\n",
+       "3    1222\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_test"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(top5.max())\n",
+    "print(top5.min())\n",
+    "print(top5.sum())\n",
+    "print(top5.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.argmax())\n",
+    "print(top5.argmin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avatar\n",
+      "SW VII\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.idxmax())\n",
+    "print(top5.idxmin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2923, 2799, 2320, 2264, 2071]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top5.to_list())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,29 +293,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titanic    2264\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n",
+      "Titanic    2264\n",
+      "SW VII     2071\n",
+      "Name: top5, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_vista = top5[3:]\n",
+    "top_vista_copy = top5[3:].copy()\n",
+    "print(top_vista)\n",
+    "print(top_vista_copy)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Titanic    1000\n",
+       "SW VII     2071\n",
+       "Name: top5, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_vista_copy[\"Titanic\"] = 1000\n",
+    "top_vista_copy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avatar                 2923\n",
+       "Vengadores:End Game    2799\n",
+       "Avatar II              2320\n",
+       "Titanic                2264\n",
+       "SW VII                 2071\n",
+       "Name: top5, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
