--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/14_Ejercicios_Series.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/14_Ejercicios_Series.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mum     45\n",
+       "Dad     46\n",
+       "Jing    23\n",
+       "Jang    10\n",
+       "Name: Familia, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_1 = pd.Series([45,46,23,10],\n",
+    "                    index = [\"Mum\",\"Dad\",\"Jing\",\"Jang\"])\n",
+    "serie_1.name = \"Familia\"\n",
+    "serie_1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,10 +122,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Mum', 'Dad', 'Jing', 'Jang'], dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_1.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45, 46, 23, 10])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_1.values"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "serie_3 = pd.Series([2014,2015,2016,2017],\n",
+    "                    index = [\"Breaking\",\"Shingeki\",\"GoT\",\"Kimetsu\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('La serie', 'Breaking', 'tiene', np.int64(11), 'años')\n"
+     ]
+    }
+   ],
+   "source": [
+    "años = (\"La serie\",serie_3.idxmin(),\"tiene\",2025-serie_3.min(),\"años\")\n",
+    "print(años)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +232,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Breaking'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_3.idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kimetsu'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_3.idxmax()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +286,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2017)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_3.iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2017)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_3[\"Kimetsu\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dad     46\n",
+       "Jing    23\n",
+       "Jang    10\n",
+       "Name: Familia, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_1[\"Dad\":\"Jang\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,22 +377,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "serie_8 = pd.Series(\"Datascience\",\n",
+    "                    index = [1,2,3,4,5,6,7,8,9,10])\n",
+    "serie_8.iloc[5] = \"TheBridge\"\n",
+    "serie_8.iloc[8] = \"Bootcamp\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     Datascience\n",
+       "2     Datascience\n",
+       "3     Datascience\n",
+       "4     Datascience\n",
+       "5     Datascience\n",
+       "6       TheBridge\n",
+       "7     Datascience\n",
+       "8     Datascience\n",
+       "9        Bootcamp\n",
+       "10    Datascience\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_8"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
