--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,10 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro1    12\n",
+       "Libro2    10\n",
+       "Libro3    35\n",
+       "Libro4    20\n",
+       "Libro5    22\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie1 = {\"Libro1\":12,\"Libro2\":10,\"Libro3\":35,\"Libro4\":20,\"Libro5\":22}\n",
+    "serie1_new = pd.Series(serie1)\n",
+    "serie1_new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro1    autor1\n",
+       "Libro2    autor2\n",
+       "Libro3    autor3\n",
+       "Libro4    autor4\n",
+       "Libro5    autor5\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie2 = {\"Libro1\":\"autor1\",\"Libro2\":\"autor2\",\"Libro3\":\"autor3\",\"Libro4\":\"autor4\",\"Libro5\":\"autor5\"}\n",
+    "serie2_new = pd.Series(serie2)\n",
+    "serie2_new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +160,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etapa</th>\n",
+       "      <th>Escrito por</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Libro1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>autor1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>autor2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>autor3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>autor4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro5</th>\n",
+       "      <td>22</td>\n",
+       "      <td>autor5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Etapa Escrito por\n",
+       "Libro1     12      autor1\n",
+       "Libro2     10      autor2\n",
+       "Libro3     35      autor3\n",
+       "Libro4     20      autor4\n",
+       "Libro5     22      autor5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic_3 = {\"Etapa\":serie1,\"Escrito por\":serie2}\n",
+    "df_ejemplo = pd.DataFrame(dic_3)\n",
+    "df_ejemplo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +254,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Etapa', 'Escrito por'], dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Libro1', 'Libro2', 'Libro3', 'Libro4', 'Libro5'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.index\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,8 +310,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro1    12\n",
+       "Libro2    10\n",
+       "Libro3    35\n",
+       "Libro4    20\n",
+       "Libro5    22\n",
+       "Name: Etapa, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo[\"Etapa\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro1    autor1\n",
+       "Libro2    autor2\n",
+       "Libro3    autor3\n",
+       "Libro4    autor4\n",
+       "Libro5    autor5\n",
+       "Name: Escrito por, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo[\"Escrito por\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +372,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Etapa              12\n",
+       "Escrito por    autor1\n",
+       "Name: Libro1, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.loc[\"Libro1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Etapa              35\n",
+       "Escrito por    autor3\n",
+       "Name: Libro3, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.loc[\"Libro3\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +430,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unidad 1</th>\n",
+       "      <th>Unidad 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Sprint1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sprint2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sprint3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unidad 1  Unidad 2\n",
+       "Sprint1         3         1\n",
+       "Sprint2         4         2\n",
+       "Sprint3         5         5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unidad1 = {\"Sprint1\": 3,\"Sprint2\": 4,\"Sprint3\": 5}\n",
+    "unidad2 = {\"Sprint1\": 1,\"Sprint2\": 2,\"Sprint3\": 5}\n",
+    "tiempos = {\"Unidad 1\":unidad1,\"Unidad 2\": unidad2}\n",
+    "tiempos_final = pd.DataFrame(tiempos)\n",
+    "tiempos_final\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
